--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
     "gatsby": "^4.11.2",
+    "gatsby-plugin-image": "^2.11.1",
+    "gatsby-plugin-mdx": "^3.11.1",
+    "gatsby-plugin-page-creator": "^4.11.1",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-sharp": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
