--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@mdx-js/mdx": "v1",
     "@mdx-js/react": "v1",
     "gatsby": "^4.11.2",
+    "gatsby-plugin-babel-optional-chaining": "^1.0.0",
     "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-mdx": "^3.11.1",
+    "gatsby-plugin-nullish-coalescing-operator": "^1.0.1",
     "gatsby-plugin-page-creator": "^4.11.1",
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-source-filesystem": "^4.11.1",
@@ -30,9 +35,13 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.12.0",
     "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "typescript": "^4.6.3"
   }
 }
