--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "format:prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format:eslint": "eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
+    "format": "yarn format:eslint && yarn format:prettier"
   },
   "dependencies": {
     "@babel/core": "^7.17.9",
@@ -24,6 +27,7 @@
     "gatsby": "^4.11.2",
     "gatsby-plugin-babel-optional-chaining": "^1.0.0",
     "gatsby-plugin-image": "^2.11.1",
+    "gatsby-plugin-less": "^6.11.0",
     "gatsby-plugin-mdx": "^3.11.1",
     "gatsby-plugin-nullish-coalescing-operator": "^1.0.1",
     "gatsby-plugin-page-creator": "^4.11.1",
@@ -40,8 +44,17 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "gatsby-plugin-eslint": "^4.0.2",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   }
 }
