--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "semi": false,
   "endOfLine": "lf",
   "singleQuote": true,
+  "jsxSingleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5"
 }
