--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "files.eol": "\n",
   "workbench.colorCustomizations": {
     "activityBar.background": "#589980"
-  }
+  },
+  "prettier.singleQuote": true
 }
