--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-nullish-coalescing-operator": "^1.0.1",
     "gatsby-plugin-page-creator": "^4.11.1",
     "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-plugin-slug": "^2.0.0",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-sharp": "^4.11.0",
     "grommet": "^2.22.0",
