--- a/package.json
+++ b/package.json
@@ -34,12 +34,18 @@
     "gatsby-plugin-page-creator": "^4.11.1",
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-plugin-slug": "^2.0.0",
+    "gatsby-remark-autolink-headers": "^5.13.0",
+    "gatsby-remark-slug": "^0.1.0",
+    "gatsby-remark-table-of-contents": "^2.0.0",
     "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.11.0",
+    "github-slugger": "^1.4.0",
     "grommet": "^2.22.0",
     "grommet-icons": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "remark-slug": "^7.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
